# Neuro-Shield_GeoMap

./: BACKEND_GUIDE.md  COMPLETION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  main.py  pyproject.toml
backend/: demo.db  requirements.txt
backend/app/: __main__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/geo/: README.md  sido.json  sigungu.json
frontend/public/mock/: geo-kpi.json
frontend/scripts/: extract-geo.js  generate-test-kpi.ts  normalize-geo.mjs  prepare-geo-data.py
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: KoreaMap.tsx
frontend/src/components/ui/: button.tsx  card.tsx  select.tsx
frontend/src/features/geo-ops/: GeoOpsDashboardPage.tsx
frontend/src/features/geo-ops/api/: geoApi.ts
frontend/src/features/geo-ops/components/: CompareChart.tsx  DistributionMiniChart.tsx  LeftPanel.tsx  Legend.tsx  MapPanel.tsx  RightPanel.tsx  RmateMapPanel.tsx  Tooltip.tsx  TopBar.tsx  TrendChart.tsx
frontend/src/features/geo-ops/store/: useGeoOpsStore.ts
frontend/src/features/geo-ops/utils/: bbox.ts  joinAudit.ts  normalizers.ts  quantile.ts
frontend/src/features/geomap/api/: geoApi.ts
frontend/src/features/geomap/components/: Breadcrumb.tsx  ControlsPanel.tsx  (+6 more)
frontend/src/lib/: api.ts  types.ts
frontend/src/types/: rmate.d.ts
scripts/: normalize-kostat-2018.ts
(+5 files in other folders)
