[project]
name = "geomap-service-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.10.6",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "sqlmodel==0.0.22",
    "uvicorn[standard]==0.34.0",
]
